[project]
name = "health-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "google-genai>=1.0.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
